--- a/miniprogram/pages/square/square.wxml
+++ b/miniprogram/pages/square/square.wxml
@@ -7,15 +7,13 @@
 <scroll-view class="box" scroll-y>
 <view class="stores" wx:for="{{stores}}" wx:key="index"> 
   <view class="list">
-    <image class="location" src="../../images/xrxmui(1)/svg/coordinates_fill.svg"></image>
-    <text class="storeName" bindtap="goToDetail">店铺名称</text>
-    <image class="v-prove" src="../../images1/image/v认证.png" ></image>
-
-<!-- 星星组件 -->
-    <!-- <view class="mb-5">
-		<star bind:staring="staring"></star>
-	</view> -->
-
+   <view class="head">
+     <image class="location" src="../../images/xrxmui(1)/svg/coordinates_fill.svg"></image>
+     <text class="storeName" bindtap="goToDetail">店铺名称</text>
+     <image class="v-prove" src="../../images1/image/v认证.png" ></image>
+   </view>
+    
+    <!-- 星星图形 -->
 
     <scroll-view class="photos" scroll-x="true">
        <view class="photo-list">
