--- a/miniprogram/components/comment-card/comment-card.wxss
+++ b/miniprogram/components/comment-card/comment-card.wxss
@@ -95,3 +95,14 @@
       display: flex;
       height: 203rpx;
   }
+  .stars{
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      /* background-color: red; */
+  }
+  .comment-card .shop-self .shop-name .stars image{
+      width: 50rpx;
+      height: 50rpx;
+      margin: 0;
+  }
