--- a/miniprogram/pages/login/login.wxss
+++ b/miniprogram/pages/login/login.wxss
@@ -52,6 +52,7 @@ page {
     height: 87.5rpxs;
     border-radius: 50rpx;
     margin-top: 49rpx;
+    /* align-items: center; */
 }
 .form #button:active{
     background-color: rgba(210, 187, 171, 1);
@@ -60,4 +61,9 @@ page {
     text-align: center;
     color: white;
     font-size: 35rpx;
+}
+.skip{
+    margin-top: 10rpx;
+    text-align: center;
+    color: white;
 }
