--- a/miniprogram/pages/shops-detail/shops-detail.wxml
+++ b/miniprogram/pages/shops-detail/shops-detail.wxml
@@ -7,13 +7,21 @@
 
             <view class="shop-info-items details">
                 <view class="info-item">{{shop_name}}</view>
-                <view class="info-item">评分:{{shop_score}}</view>
+                <view class="info-item">
+                    <view class="stars">
+                        <image src="../../images/xrxmui(1)/svg/star-{{shop_score>=1?'fill':'no-fill'}}.svg"></image>
+                        <image src="../../images/xrxmui(1)/svg/star-{{shop_score>=3?'fill':'no-fill'}}.svg"></image>
+                        <image src="../../images/xrxmui(1)/svg/star-{{shop_score>=5?'fill':'no-fill'}}.svg"></image>
+                        <image src="../../images/xrxmui(1)/svg/star-{{shop_score>=7?'fill':'no-fill'}}.svg"></image>
+                        <image src="../../images/xrxmui(1)/svg/star-{{shop_score>=9?'fill':'no-fill'}}.svg"></image>
+                    </view>
+                </view>
                 <view class="info-item">{{shop_comment_count}}条评价</view>
             </view>
         </view>
         <view class="buttons">
-            <button>收藏店铺</button>
-            <button>我要评价</button>
+            <button  style="background-color: {{btnColor}};" bindtap="collection">{{btnText}}</button>
+            <button bindtap="goToComment">我要评价</button>
         </view>
     </view>
     <view class="selector-container">
@@ -32,5 +40,5 @@
             <checkbox></checkbox>
         </label>
     </view>
-        <comment-card bind:myevent="onMyEvent" wx:for="{{info}}" wx:key="index" shop_name="{{shop_name}}" for_shop_score="{{item.shop.shop_score}}" for_user_name="{{item.user.user_name}}" for_like_count="{{item.user.comment.comment_like_count}}" for_review_count="{{item.user.comment.comment_review_count}}" if_image_url_1="{{item.user.image_url[0]!=null}}" if_image_url_2="{{item.user.image_url[1]!=null}}" if_image_url_3="{{item.user.image_url[2]!=null}}" for_like_url="{{item.isLiked?'../../images1/image/like_fill.png':'../../images1/image/like.svg'}}" for_comment_id="{{item.user.comment.comment_id}}"></comment-card>
+    <comment-card bind:myevent="onMyEvent" wx:for="{{info}}" wx:key="index" shop_name="{{shop_name}}" for_shop_score="{{item.shop.shop_score}}" for_user_name="{{item.user.user_name}}" for_like_count="{{item.user.comment.comment_like_count}}" for_review_count="{{item.user.comment.comment_review_count}}" if_image_url_1="{{item.user.image_url[0]!=null}}" if_image_url_2="{{item.user.image_url[1]!=null}}" if_image_url_3="{{item.user.image_url[2]!=null}}" for_like_url="{{item.isLiked?'../../images1/image/like_fill.png':'../../images1/image/like.svg'}}" for_comment_id="{{item.user.comment.comment_id}}"></comment-card>
 </view>
