--- a/miniprogram/pages/shops/shops.wxss
+++ b/miniprogram/pages/shops/shops.wxss
@@ -95,3 +95,15 @@ page{
     border-radius: 50%;
     background-color: red;
 }
+
+.stars{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    /* background-color: red; */
+}
+.stars image{
+    width: 50rpx;
+    height: 50rpx;
+    margin: 0;
+}
