prevent none-login

--- a/miniprogram/pages/help/help.wxml
+++ b/miniprogram/pages/help/help.wxml
@@ -1,5 +1,5 @@
 <view class="body">
-    <image src="../../images1/image/food.png"></image>
+    <image src="../../images1/image/food.png" mode="aspectFill"></image>
     <text>这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南这里是亲爱的使用指南
     </text>
 </view>
